--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link href="vendor/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="vendor/animate.css/animate.min.css" rel="stylesheet">
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="vendor/font-awesome/css/font-awesome.css" rel="stylesheet">
   <link href="vendor/owl.carousel/owl.carousel.min.css" rel="stylesheet">
 
 
@@ -28,12 +29,7 @@
   <link href="css/style.css" rel="stylesheet">
   <link href="css\index.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: EstateAgency - v2.2.1
-  * Template URL: https://bootstrapmade.com/real-estate-agency-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body>
@@ -131,36 +127,22 @@
     </div>
   </div> -->
 
+
+
   <!-- ======= Header/Navbar ======= -->
 
-  <nav class="navbar navbar-default navbar-trans navbar-expand-lg fixed-top">
-    <div class="container">
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
-        aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <a class="navbar-brand text-brand" href="index.html">Home<span class="color-b">Land</span></a>
-      <button type="button" class="btn btn-link nav-search navbar-toggle-box-collapse d-md-none" data-toggle="collapse"
-        data-target="#navbarTogglerDemo01" aria-expanded="false">
-        <span class="fa fa-search" aria-hidden="true"></span>
-      </button>
-      <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">Buy</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="property-grid.html">Rent</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="blog-grid.html">About</a>
-          </li>
-          <li class="nav-item dropdown">
+
+  <nav class="navbar navbar-default navbar-trans navbar-expand-lg" id="nav_container">
+    <div class="container-fluid nav_top">
+
+      <a class="navbar-brand text-brand" href="index.html" style="margin-left: 3rem; margin-top: 2rem;"><img id="logo"
+          src="./img/Logo.png" alt="Logo">Home<span class="color-b">Land</span></a>
+      <div class="navbar-nav align-items-center ml-auto" style="align-items: flex-end;">
+        <a class="nav-item nav-link top_nav_link" href="#">Post Property</a>
+        <a id="signin" class="nav-item nav-link top_nav_link" href="#">Sign in</a>
+        <a class="nav-item nav-link btn  mr-0 top_nav_link" href="signup.html">Sign up</a>
+      </div>
+      <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               Pages
@@ -171,79 +153,149 @@
               <a class="dropdown-item" href="agents-grid.html">Agents Grid</a>
               <a class="dropdown-item" href="agent-single.html">Agent Single</a>
             </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
-      <button type="button" class="btn btn-b-n navbar-toggle-box-collapse d-none d-md-block" data-toggle="collapse"
+          </li> -->
+    </div>
+    <div class="container-fluid nav_bottom" id="nav_bottom">
+      <a style="margin-right: 0%;" class="navbar-brand" href="img\Logo.png"><img id="logo2" src="img\Logo.png"
+          alt="Logo"></a>
+      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
+        aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+
+      <!-- <button type="button" class="btn btn-link nav-search navbar-toggle-box-collapse d-md-none" data-toggle="collapse"
         data-target="#navbarTogglerDemo01" aria-expanded="false">
         <span class="fa fa-search" aria-hidden="true"></span>
-      </button>
+      </button> -->
+      <div class="navbar-collapse collapse" id="navbarDefault">
+        <div class="navbar-nav">
+          <div class="nav-item">
+            <a class="nav-link active" href="index.html">Home</a>
+          </div>
+          <div class="nav-item">
+            <a class="nav-link" href="buy.html">Buy</a>
+          </div>
+          <div class="nav-item">
+            <a class="nav-link" href="property-grid.html">Rent</a>
+          </div>
+          <div class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </div>
+          <div class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </div>
+        </div>
+        <div class="navbar-nav align-items-center ml-auto" style="align-items: flex-end;" id="right_nav_cont">
+          <a class="nav-item nav-link btn  mr-0" href="#" id="post_property">Post Property</a>
+          <div class="dropdowdn">
+            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              <i class="fa fa-user-circle-o" aria-hidden="true"></i></button>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+              <a href="#" class="dropdown-item">Sign Up</a>
+              <a href="#" class="dropdown-item">Sign in</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </nav>
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel quisquam excepturi placeat molestiae, vero deserunt
-    amet doloribus nulla, blanditiis obcaecati, ratione maxime aperiam repellendus et harum eveniet tenetur temporibus
-    beatae.
-    Asperiores adipisci alias, sed quas et quibusdam deserunt assumenda soluta, explicabo quo incidunt natus quia, id
-    accusamus ullam autem consequuntur voluptates repellendus ex sequi perferendis quae ipsum! Nam, rem quisquam?
-    Similique, a. Tempora numquam, ex libero id eligendi repudiandae optio culpa, modi nisi rem sunt autem in, quos
-    pariatur et amet placeat facere quas beatae sequi expedita repellendus odit. Obcaecati.
-    Dolorum rerum explicabo quae eos, omnis minus quasi fugiat cumque quisquam, ab ratione neque sed quibusdam inventore
-    nesciunt cupiditate iusto temporibus molestias alias, incidunt assumenda consectetur. Suscipit quod iusto nulla!
-    Itaque, pariatur fugit! Ducimus voluptates delectus, ea alias laborum voluptate sapiente nam? Assumenda, quisquam
-    reprehenderit explicabo accusamus quo id repudiandae impedit delectus suscipit optio, dolor nesciunt corporis, amet
-    nulla autem!
-    Sunt ratione commodi exercitationem incidunt magnam consequuntur iure voluptatum, enim sequi rerum blanditiis
-    necessitatibus culpa quidem autem consequatur quis nam. Corrupti ipsa dolor incidunt cum magnam, sed placeat rerum
-    deserunt!
-    Asperiores, dolorem amet suscipit repellendus incidunt dolore praesentium maxime esse eaque vel nam corporis dicta
-    ipsum vitae consequuntur veritatis voluptatibus, et doloremque eveniet veniam. Ad esse deleniti ipsam praesentium
-    modi.
-    Odit neque perferendis maiores dolor labore blanditiis magni, iure non optio! Consequuntur accusantium cupiditate
-    voluptate dolores error animi, iste molestias, nemo modi nobis possimus est quibusdam ab quia iure assumenda!
-    Et ducimus fuga nihil, porro aspernatur repellat, facilis aliquam optio odio nemo labore nulla vero recusandae,
-    accusamus assumenda? Laboriosam deserunt repudiandae cum possimus in recusandae optio. Veritatis dolore atque
-    magnam!
-    Neque sit, repudiandae rem dignissimos ratione beatae quo sapiente nostrum, id eos culpa iste ullam officia, eius
-    ipsum adipisci! A ab vel magnam. Distinctio quisquam odit ipsa esse sed reiciendis.
-    Corporis incidunt dicta molestiae quisquam suscipit explicabo debitis ipsa, quo illo ratione veritatis repellat
-    eaque ad nesciunt ea consequatur temporibus eligendi accusamus maxime vel exercitationem perferendis aliquid amet.
-    Maxime, iure!
-    Ex voluptas quos, officia ad odio temporibus ipsam rerum quas iusto, quidem amet optio velit omnis hic quod ipsum
-    qui corrupti neque enim ratione facilis! Molestiae natus consequatur modi culpa!
-    Rem porro at voluptas impedit, hic sit distinctio nostrum veniam explicabo tempore delectus ex nisi dolores rerum
-    recusandae neque inventore, quod, officia in itaque corrupti. Non vel quis sint unde.
-    Eligendi dolores esse, quibusdam deleniti labore officiis eius ex nesciunt placeat quasi optio itaque cupiditate
-    assumenda ipsa quam, illum tenetur, exercitationem voluptatibus a voluptate eaque. Iste sunt magni exercitationem
-    quos.
-    Incidunt quod harum labore rerum temporibus, fuga maxime, impedit sint eius eum unde placeat quidem dolor quibusdam
-    nemo animi voluptates quos. Explicabo eos, quod perferendis quae tempora neque sit soluta.
-    Vitae numquam quo, totam exercitationem blanditiis in cumque amet soluta libero. Assumenda, commodi error placeat
-    ipsam expedita doloremque quas velit harum tempora consectetur possimus illo quisquam fugit aliquam beatae ipsa!
-    Nostrum exercitationem facere voluptas impedit cumque praesentium dolore iure quis accusamus iusto nemo nulla, illo
-    numquam quos iste hic! Provident corrupti voluptas maxime quibusdam quidem reprehenderit cum, hic sapiente vero?
-    Aspernatur, aperiam magnam, at iusto incidunt corrupti et voluptas quibusdam possimus molestias tempora impedit
-    tempore quaerat quidem fuga sunt magni maiores ipsam. Maiores hic, deleniti ut quaerat minus ab. Alias.
-    Error id ipsum reprehenderit est, reiciendis qui officia sequi ad dolorem, voluptas nemo odio accusantium labore eum
-    iste alias possimus nostrum soluta a sit maxime eos natus? Iure, qui autem.
-    Nulla nam obcaecati labore praesentium expedita numquam voluptates quas blanditiis cum, modi nostrum enim incidunt
-    quidem quisquam ipsum illum molestias id qui eos deserunt debitis cumque eaque saepe. Eum, laborum.
-    Amet dolor quo libero officiis qui asperiores. Dignissimos, nostrum omnis impedit tempore id voluptatibus adipisci
-    alias animi dolor odio ad repudiandae aliquid explicabo repellendus voluptate sint ratione voluptatem quibusdam?
-    Odit.
-    Ex deserunt repellendus voluptatum tenetur quibusdam architecto exercitationem dignissimos, fuga, delectus doloribus
-    repellat velit odio quod omnis magni officia, a non vitae nesciunt qui impedit? Ducimus itaque ullam cupiditate!
-    Rem.
-    Suscipit vero aliquam commodi deserunt sit quis pariatur repellendus porro ad ipsa animi minus laudantium fuga cum
-    harum autem, a nulla quibusdam veritatis placeat natus exercitationem! Veniam rerum sunt minima.
-    Labore necessitatibus hic beatae fuga, reprehenderit architecto dolores odit iste quaerat. Dolor quos optio
-    quibusdam, eligendi neque molestiae cupiditate placeat repellat reiciendis repudiandae? Quas accusantium laborum
-    quidem ducimus alias nostrum.
-    Provident assumenda delectus obcaecati velit sapiente, aut possimus tempora praesentium officiis distinctio animi
-    fugiat, deserunt, odio perferendis iusto omnis dolore cumque. Numquam eum, expedita nemo assumenda necessitatibus
-    quibusdam optio accusantium!</p>
+  <div class="container search-bar">
+    <div class="row">
+      <div class="input-group col-4 mb-0">
+        <select class="city-select" name="city_select" id="city_select">
+          <option selected value="ahmedabad">Ahmedabad</option>
+          <option value="baroda">Baroda</option>
+          <option value="bangalore">Bangalore</option>
+          <option value="bhopal">Bhopal</option>
+          <option value="chennai">Chennai</option>
+          <option value="chandigarh">Chandigarh</option>
+          <option value="gurugram">Gurugram</option>
+          <option value="hyderabad">Hyderabad</option>
+          <option value="jaipur">Jaipur</option>
+          <option value="jodhpur">Jodhpur</option>
+          <option value="kolkata">Kolkata</option>
+          <option value="mumbai">Mumbai</option>
+          <option value="navi_mumbai">Navi Mumbai</option>
+          <option value="nagpur">Nagpur</option>
+          <option value="raipur">Raipur</option>
+        </select>
+      </div>
+      <form class="form-inline search-field col-8 row">
+        <input class="search-field col-9" type="search" id="search_property" style="background-color: #d6d6d6;"
+          placeholder="Locality / area / builder ">
+        <button class="btn btn-outline-dark my-2 my-sm-0 col-3 search_btn" type="submit"><i class="fa fa-search"></i>
+        </button>
+      </form>
+    </div>
+  </div>
+  <h1>Featured Properties</h1>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="card card-primary">
+          <div class="card-header">Hyderabad</div>
+          <div class="card-body"><img src="img/property-1.jpg" class="img-responsive" style="width:100% ; height: 100%;"
+              alt="Image">
+          </div>
+          <div class="card-footer"><a href="explore.html">Explore</a></div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card card-danger">
+          <div class="card-header">Chennai</div>
+          <div class="card-body"><img src="img/property-2.jpg" class="img-responsive" style="width:100%; height: 100%;"
+              alt="Image">
+          </div>
+          <div class="card-footer"><a href="explore.html">Explore</a></div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card card-success">
+          <div class="card-header">Kolkata</div>
+          <div class="card-body"><img src="img/property-3.jpg" class="img-responsive" style="width:100%; height: 100%;"
+              alt="Image">
+          </div>
+          <div class="card-footer"><a href="explore.html">Explore</a></div>
+        </div>
+      </div>
+    </div>
+  </div><br>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="card card-primary">
+          <div class="card-header">Mumbai</div>
+          <div class="card-body"><img src="img/property-4.jpg" class="img-responsive" style="width:100%; height: 100%;"
+              alt="Image"></div>
+          <div class="card-footer"><a href="explore.html">Explore</a></div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card card-primary">
+          <div class="card-header">Delhi</div>
+          <div class="card-body"><img src="img/property-5.jpg" class="img-responsive" style="width:100%; height: 100%;"
+              alt="Image">
+          </div>
+          <div class="card-footer"><a href="explore.html">Explore</a></div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card card-primary">
+          <div class="card-header">Bangalore</div>
+          <div class="card-body"><img src="img/property-6.jpg" class="img-responsive" style="width:100%; height: 100%"
+              alt="Image">
+          </div>
+          <div class="card-footer"><a href="explore.html">Explore</a></div>
+        </div>
+      </div>
+    </div>
+  </div><br><br>
+
 
 
 
@@ -1118,19 +1170,16 @@
           <nav class="nav-footer">
             <ul class="list-inline">
               <li class="list-inline-item">
-                <a href="#">Home</a>
-              </li>
-              <li class="list-inline-item">
                 <a href="#">About</a>
               </li>
               <li class="list-inline-item">
-                <a href="#">Property</a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">Blog</a>
-              </li>
-              <li class="list-inline-item">
                 <a href="#">Contact</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#">Privacy</a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#">Terms</a>
               </li>
             </ul>
           </nav>
@@ -1164,19 +1213,9 @@
             </ul>
           </div>
           <div class="copyright-footer">
-            <p class="copyright color-text-a">
-              &copy; Copyright
-              <span class="color-a">HomeLand</span> All Rights Reserved.
+            <p class="copyright">
+              &copy; Copyright HomeLand All Rights Reserved.
             </p>
-          </div>
-          <div class="credits">
-            <!--
-            All the links in the footer should remain intact.
-            You can delete the links only if you purchased the pro version.
-            Licensing information: https://bootstrapmade.com/license/
-            Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=EstateAgency
-          -->
-            <a href="https://bootstrapmade.com/"></a>
           </div>
         </div>
       </div>
